unpackaged/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <inlineHelpText>Customer Number for Soluno&#39;s billing system</inlineHelpText>
    <label>Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>