unpackaged/main/default/objects/Account/fields/Customer_Retained__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retained__c</fullName>
    <label>Customer Retained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Merged/Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>