unpackaged/main/default/objects/Account/fields/Customer_Retention_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retention_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Retention Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RetentionUser</relationshipName>
    <type>Lookup</type>
</CustomField>