unpackaged/main/default/objects/Account/fields/Customer_Status_Overall__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Overall__c</fullName>
    <inlineHelpText>Describes the overall status of the Customer account.</inlineHelpText>
    <label>Customer Status - Overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Status_Values</valueSetName>
    </valueSet>
</CustomField>