unpackaged/main/default/objects/Account/fields/Data_Migration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Stage__c</fullName>
    <description>Removed FLS for R1917684</description>
    <label>Data Migration Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kick-Off</fullName>
            </value>
            <value>
                <fullName>Build Data</fullName>
            </value>
            <value>
                <fullName>Financial Data</fullName>
            </value>
            <value>
                <fullName>Application Review</fullName>
            </value>
            <value>
                <fullName>Migration Complete</fullName>
            </value>
            <value>
                <fullName>Re-Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>