unpackaged/main/default/objects/Account/fields/Days_Active_Converted__c.field-meta.xml
<CustomField>
    <fullName>Days_Active_Converted__c</fullName>
    <description>R165289</description>
    <formula>if( BLANKVALUE(Churn_Date__c, DATEVALUE(&quot;1900-1-1&quot;))= DATEVALUE(&quot;1900-1-1&quot;), today()- Conversion_Date__c,Churn_Date__c - Conversion_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Active (Converted)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>