unpackaged/main/default/objects/Account/fields/Do_Not_Sell_MC_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sell_MC_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if we are blocked from selling MyCase Accounting to the firm</inlineHelpText>
    <label>Do Not Sell MC Accounting</label>
    <type>Checkbox</type>
</CustomField>