unpackaged/main/default/objects/Account/fields/Docketwise_ID__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_ID__c</fullName>
    <externalId>true</externalId>
    <label>Docketwise ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>