unpackaged/main/default/objects/Account/fields/Docketwise_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_Onboarding_Status__c</fullName>
    <inlineHelpText>Identifies the current status of the latest onboarding effort for Docketwise.</inlineHelpText>
    <label>Docketwise Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>