unpackaged/main/default/objects/Account/fields/Docketwise_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_Product_Tier__c</fullName>
    <label>Docketwise Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>