unpackaged/main/default/objects/Account/fields/Docketwise_Term__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_Term__c</fullName>
    <inlineHelpText>Monthly or Annual billing term for Active Docketwise contract</inlineHelpText>
    <label>Docketwise Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Term</valueSetName>
    </valueSet>
</CustomField>