unpackaged/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>IF(OR(BEGINS(Website, &quot;http://www&quot;),BEGINS(Website, &quot;https://www&quot;), BEGINS(Website, &quot;www.&quot;)),
    SUBSTITUTE(Website, LEFT(Website, FIND(&quot;.&quot;, Website)), NULL),
        IF(BEGINS(Website, &quot;http://&quot;),
            MID(Website, FIND(&#39;http://&#39;, Website, 1)+7, (LEN(Website) - FIND(&#39;http://&#39;, Website, 1)+7)),
                IF(BEGINS(Website, &quot;https://&quot;),
                    MID(Website, FIND(&#39;https://&#39;, Website, 1)+8, (LEN(Website) - FIND(&#39;https://&#39;, Website, 1)+8)),
                        Website
                )
        )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to parse domain from website field</inlineHelpText>
    <label>Domain</label>
    <type>Text</type>
</CustomField>