unpackaged/main/default/objects/Account/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked through Workato automation if account has a duplicate through Outbound prospecting process</description>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>