unpackaged/main/default/objects/Account/fields/Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Rate__c</fullName>
    <inlineHelpText>blended rate for payments, if we adjusted their pricing</inlineHelpText>
    <label>Effective Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>