unpackaged/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>R151634</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>