unpackaged/main/default/objects/Account/fields/Encrypted_Billing_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Billing_Account_ID__c</fullName>
    <description>R151988</description>
    <label>Encrypted Billing Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>