unpackaged/main/default/objects/Account/fields/Encrypted_Zuora_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Zuora_Account_Id__c</fullName>
    <description>R151988</description>
    <label>Encrypted Zuora Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>