unpackaged/main/default/objects/Account/fields/End_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Service__c</fullName>
    <description>Date the customer churns from Customer to Customer Lost; R1814702 - remove FLS</description>
    <inlineHelpText>Date the customer churns from Customer to Customer Lost.</inlineHelpText>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>