unpackaged/main/default/objects/Account/fields/Error_Payments__c.field-meta.xml
<CustomField>
    <fullName>Error_Payments__c</fullName>
    <label>Error Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>