unpackaged/main/default/objects/Account/fields/Established_Date_for_Axia__c.field-meta.xml
<CustomField>
    <fullName>Established_Date_for_Axia__c</fullName>
    <formula>Year_Established__c &amp; &quot;-01-01&quot;</formula>
    <label>Established Date for Axia</label>
    <type>Text</type>
</CustomField>