unpackaged/main/default/objects/Account/fields/Firm_City__c.field-meta.xml
<CustomField>
    <fullName>Firm_City__c</fullName>
    <description>R165289</description>
    <label>Firm City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>