unpackaged/main/default/objects/Account/fields/Firm_Country__c.field-meta.xml
<CustomField>
    <fullName>Firm_Country__c</fullName>
    <description>R165289</description>
    <label>Firm Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>