unpackaged/main/default/objects/Account/fields/Firm_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_Master_ID__c</fullName>
    <description>Unique ID used to identify firm across various systems</description>
    <label>Firm Master ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>