unpackaged/main/default/objects/Account/fields/Firm_Name_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name_Keyword__c</fullName>
    <description>TRUE if account name contains a top law firm name keyword</description>
    <formula>IF(
OR(
CONTAINS( Name, &quot;Law&quot;),
CONTAINS( Name, &quot;Firm&quot;),
CONTAINS( Name, &quot;Attorney&quot;),
CONTAINS( Name, &quot;Legal&quot;),
CONTAINS( Name, &quot;Office&quot;),
CONTAINS( Name, &quot;Mediation&quot;),
CONTAINS( Name, &quot;law&quot;),
CONTAINS( Name, &quot;firm&quot;),
CONTAINS( Name, &quot;attorney&quot;),
CONTAINS( Name, &quot;legal&quot;),
CONTAINS( Name, &quot;office&quot;),
CONTAINS( Name, &quot;mediation&quot;)
),

TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Name Keyword</label>
    <type>Checkbox</type>
</CustomField>