unpackaged/main/default/objects/Account/fields/Firm_State__c.field-meta.xml
<CustomField>
    <fullName>Firm_State__c</fullName>
    <description>R165289</description>
    <label>Firm State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>