unpackaged/main/default/objects/Account/fields/Firm_Street__c.field-meta.xml
<CustomField>
    <fullName>Firm_Street__c</fullName>
    <description>R165289</description>
    <label>Firm Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>