unpackaged/main/default/objects/Account/fields/Firm_Zip__c.field-meta.xml
<CustomField>
    <fullName>Firm_Zip__c</fullName>
    <description>R165289</description>
    <label>Firm Zip</label>
    <length>11</length>
    <type>Text</type>
</CustomField>