unpackaged/main/default/objects/Account/fields/First_MQA_Brand__c.field-meta.xml
<CustomField>
    <fullName>First_MQA_Brand__c</fullName>
    <label>First MQA Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>