unpackaged/main/default/objects/Account/fields/First_MQA_Date__c.field-meta.xml
<CustomField>
    <fullName>First_MQA_Date__c</fullName>
    <label>First MQA Date</label>
    <type>DateTime</type>
</CustomField>