unpackaged/main/default/objects/Account/fields/First_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Date__c</fullName>
    <description>R176976</description>
    <label>zzFirst Purchase Date</label>
    <type>Date</type>
</CustomField>