unpackaged/main/default/objects/Account/fields/FirstTimeBilling__c.field-meta.xml
<CustomField>
    <fullName>FirstTimeBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed is checked when the Account Balance is first time changed from Non-Zero value to 0.</description>
    <inlineHelpText>This filed is checked when the Account Balance is first time changed from Non-Zero value to 0.</inlineHelpText>
    <label>First Time Billing</label>
    <type>Checkbox</type>
</CustomField>