unpackaged/main/default/objects/Account/fields/Fraud_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Abuse__c</fullName>
    <description>R1919872</description>
    <label>Fraud/Abuse/Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspicious Account</fullName>
            </value>
            <value>
                <fullName>Fraudulent Account</fullName>
            </value>
            <value>
                <fullName>Legal/Compliance</fullName>
            </value>
            <value>
                <fullName>Payments Disabled</fullName>
            </value>
            <value>
                <fullName>Account Ownership Dispute</fullName>
            </value>
            <value>
                <fullName>Pending Account Owner Identification</fullName>
            </value>
            <value>
                <fullName>Customer Initiated Lockdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>