unpackaged/main/default/objects/Account/fields/Full_Company_Name_DBA__c.field-meta.xml
<CustomField>
    <fullName>Full_Company_Name_DBA__c</fullName>
    <description>Created for request R151946</description>
    <label>Full Company Name - DBA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>