unpackaged/main/default/objects/Account/fields/Future_Churn__c.field-meta.xml
<CustomField>
    <fullName>Future_Churn__c</fullName>
    <formula>End_Of_Service__c  &gt; TODAY()</formula>
    <label>Future Churn</label>
    <type>Checkbox</type>
</CustomField>