unpackaged/main/default/objects/Account/fields/Gearset_Test__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gearset Test</label>
    <type>Checkbox</type>
</CustomField>