unpackaged/main/default/objects/Account/fields/Google_My_Business_Profile__c.field-meta.xml
<CustomField>
    <fullName>Google_My_Business_Profile__c</fullName>
    <description>To provide websites with the firms Google My Business Profile</description>
    <label>Google My Business Profile</label>
    <length>225</length>
    <type>Text</type>
</CustomField>