unpackaged/main/default/objects/Account/fields/Growth_Account_Exec__c.field-meta.xml
<CustomField>
    <fullName>Growth_Account_Exec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Growth Account Exec</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts10</relationshipName>
    <type>Lookup</type>
</CustomField>