unpackaged/main/default/objects/Account/fields/Inbound_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Lead_Type__c</fullName>
    <label>zz Inbound Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inbound_Lead_Type</valueSetName>
    </valueSet>
</CustomField>