unpackaged/main/default/objects/Account/fields/Instagram_Handle__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Handle__c</fullName>
    <description>To provide websites with the firm&#39;s Instagram Handle</description>
    <label>Instagram Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>