unpackaged/main/default/objects/Account/fields/Installed_On_Premise_MICR_Font__c.field-meta.xml
<CustomField>
    <fullName>Installed_On_Premise_MICR_Font__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installed On Premise MICR Font</label>
    <type>Checkbox</type>
</CustomField>