unpackaged/main/default/objects/Account/fields/Is_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner__c</fullName>
    <formula>IF(
   RecordType.Name = &quot;Competitor&quot; &amp;&amp; Parent.RecordType.Name = &quot;Partner&quot;,
   TRUE,
   FALSE
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays if the competitor is also a partner.</inlineHelpText>
    <label>Is Partner</label>
    <type>Checkbox</type>
</CustomField>