unpackaged/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This account has been identified as one of Morgan&#39;s strategic accounts.</inlineHelpText>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>