unpackaged/main/default/objects/Account/fields/Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Date__c</fullName>
    <description>This is the last time the Account ownership changed.</description>
    <label>Last Assigned Date</label>
    <type>DateTime</type>
</CustomField>