unpackaged/main/default/objects/Account/fields/Last_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoiced__c</fullName>
    <description>R1814702 - remove FLS; R1915778</description>
    <inlineHelpText>Last invoiced Date from the related MyCase or Appfolio Billing Account</inlineHelpText>
    <label>Last Invoiced</label>
    <type>Date</type>
</CustomField>