unpackaged/main/default/objects/Account/fields/Last_MQA_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_MQA_Date__c</fullName>
    <label>Last MQA Date</label>
    <type>DateTime</type>
</CustomField>