unpackaged/main/default/objects/Account/fields/LawPay_6QA__c.field-meta.xml
<CustomField>
    <fullName>LawPay_6QA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LawPay 6sense Integration</description>
    <label>LawPay 6QA</label>
    <type>Checkbox</type>
</CustomField>