unpackaged/main/default/objects/Account/fields/LawPay_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Product_Tier__c</fullName>
    <label>LawPay Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>