unpackaged/main/default/objects/Account/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Used to calculate the days between creation and purchase. Populated at lead conversion</description>
    <label>Lead Created Date</label>
    <type>Date</type>
</CustomField>