unpackaged/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>R165102</description>
    <label>zz Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Book A Demo</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Integration Partner</fullName>
            </value>
            <value>
                <fullName>Sales Email</fullName>
            </value>
            <value>
                <fullName>Sales Queue</fullName>
            </value>
            <value>
                <fullName>Software Advice</fullName>
            </value>
            <value>
                <fullName>TLOMA</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>WebSite Visit</fullName>
            </value>
            <value>
                <fullName>GetApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>