unpackaged/main/default/objects/Account/fields/Legacy_CreatedByIdText__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CreatedByIdText__c</fullName>
    <description>Field used to capture Account legacy created by Id.</description>
    <label>Legacy CreatedByIdText</label>
    <length>18</length>
    <type>Text</type>
</CustomField>