unpackaged/main/default/objects/Account/fields/Legacy_IDs__c.field-meta.xml
<CustomField>
    <fullName>Legacy_IDs__c</fullName>
    <inlineHelpText>For capturing legacy IDs from all the various imported brands</inlineHelpText>
    <label>Legacy IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>