unpackaged/main/default/objects/Account/fields/Legacy_Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Lead_Channel__c</fullName>
    <inlineHelpText>Displays the lead channel value form the legacy system that created this record</inlineHelpText>
    <label>Legacy Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legacy Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>