unpackaged/main/default/objects/Account/fields/Legacy_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Partner_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Partner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>