unpackaged/main/default/objects/Account/fields/Legacy_Practice_Areas__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Practice_Areas__c</fullName>
    <inlineHelpText>Displays the values imported from the legacy system from which this record was created</inlineHelpText>
    <label>Legacy Practice Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legacy Practice Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>