unpackaged/main/default/objects/Account/fields/Legacy_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Time_Zone__c</fullName>
    <inlineHelpText>As imported during the Newco conversion</inlineHelpText>
    <label>Legacy Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>