unpackaged/main/default/objects/Account/fields/Length_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Length_in_Business__c</fullName>
    <formula>TEXT(FLOOR(((YEAR(TODAY()) * 12) + MONTH((TODAY()) - 1) - (VALUE(Year_Established__c))*12) / 12))&amp; &quot; years, &quot; &amp; TEXT(ROUND(MOD(((YEAR(TODAY()) * 12) + MONTH((TODAY()) - 1) - (VALUE(Year_Established__c))*12) / 12,1)*12,0)) &amp; &quot; months&quot;</formula>
    <label>Length in Business</label>
    <type>Text</type>
</CustomField>