unpackaged/main/default/objects/Account/fields/Linkedin_Bio__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Bio__c</fullName>
    <label>Linkedin Bio</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>