unpackaged/main/default/objects/Account/fields/Linking_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Linking_Firm_Name__c</fullName>
    <description>Updated via automation. Should be lowercase Alpha characters</description>
    <inlineHelpText>Updated via automation. Should be lowercase Alpha characters</inlineHelpText>
    <label>Linking Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>