unpackaged/main/default/objects/Account/fields/List_Contact_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>List_Contact_Initiated_Date__c</fullName>
    <label>List Contact Initiated Date</label>
    <type>Date</type>
</CustomField>