unpackaged/main/default/objects/Account/fields/List_ZD_Ticket__c.field-meta.xml
<CustomField>
    <fullName>List_ZD_Ticket__c</fullName>
    <label>List / ZD Ticket #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>