unpackaged/main/default/objects/Account/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only fill this field out for Duplicate flag types.</inlineHelpText>
    <label>Master Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>Account.RecordTypeId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>