unpackaged/main/default/objects/Account/fields/Matched_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_ID__c</fullName>
    <description>Account ID of potential duplicate account in system</description>
    <inlineHelpText>Account ID of potential duplicate account in system</inlineHelpText>
    <label>Matched Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>