unpackaged/main/default/objects/Account/fields/MC_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>MC_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R166315</description>
    <label>Firm cancelled?</label>
    <type>Checkbox</type>
</CustomField>