unpackaged/main/default/objects/Account/fields/MC_Cancelled_DateOnly__c.field-meta.xml
<CustomField>
    <fullName>MC_Cancelled_DateOnly__c</fullName>
    <description>R179006
Created Date fields in order for MyCase App to be able to clear the values.</description>
    <label>Firm Cancelled Date</label>
    <type>Date</type>
</CustomField>