unpackaged/main/default/objects/Account/fields/MC_Customer__c.field-meta.xml
<CustomField>
    <fullName>MC_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R166315</description>
    <label>zz MyCase Customer</label>
    <type>Checkbox</type>
</CustomField>