unpackaged/main/default/objects/Account/fields/MC_Customer_New__c.field-meta.xml
<CustomField>
    <fullName>MC_Customer_New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R177806</description>
    <label>MyCase Customer New</label>
    <type>Checkbox</type>
</CustomField>