unpackaged/main/default/objects/Account/fields/MC_Deleted__c.field-meta.xml
<CustomField>
    <fullName>MC_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R166315</description>
    <label>Firm deleted?</label>
    <type>Checkbox</type>
</CustomField>