unpackaged/main/default/objects/Account/fields/MC_Fake_Firm__c.field-meta.xml
<CustomField>
    <fullName>MC_Fake_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R178678</description>
    <label>Fake Firm?</label>
    <type>Checkbox</type>
</CustomField>