unpackaged/main/default/objects/Account/fields/MC_Free_Account__c.field-meta.xml
<CustomField>
    <fullName>MC_Free_Account__c</fullName>
    <description>R166315</description>
    <formula>IF(
MC_Lifetime_Discount_Percent__c = 1, 
true, false)</formula>
    <label>Firm is free account?</label>
    <type>Checkbox</type>
</CustomField>