unpackaged/main/default/objects/Account/fields/MC_GCLID__c.field-meta.xml
<CustomField>
    <fullName>MC_GCLID__c</fullName>
    <description>R1811601</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>