unpackaged/main/default/objects/Account/fields/MC_Has_Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>MC_Has_Payment_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R166315</description>
    <label>Firm has payment information?(converted)</label>
    <type>Checkbox</type>
</CustomField>