unpackaged/main/default/objects/Account/fields/MC_In_Trial__c.field-meta.xml
<CustomField>
    <fullName>MC_In_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R166315</description>
    <label>Firm is in trial?</label>
    <type>Checkbox</type>
</CustomField>