unpackaged/main/default/objects/Account/fields/MC_In_Trial_Formula__c.field-meta.xml
<CustomField>
    <fullName>MC_In_Trial_Formula__c</fullName>
    <description>R178678</description>
    <formula>IF( MyCase_Trial_Expiration__c &lt; TODAY()|| ISNULL(MyCase_Trial_Expiration__c ),False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC In Trial Formula</label>
    <type>Checkbox</type>
</CustomField>