unpackaged/main/default/objects/Account/fields/MC_Lifetime_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>MC_Lifetime_Discount_Percent__c</fullName>
    <description>R166315</description>
    <label>Lifetime discount percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>